Fixed overflow

--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,9 @@
 }
 
 body{
-    background: var(--bg-color);
     color: var(--dark);
-    min-height: 100vh;
+    background-color: var(--dark);
 }
-
 h1{
     font-size: 2.8rem;
     text-align: center;
@@ -33,6 +31,7 @@ header{
     align-items: center;
     height: 60px;
     background-color: var(--dark);
+    border-bottom: 3px solid var(--light);
     color: var(--light);
 }
 button{
@@ -46,21 +45,30 @@ button{
     font-weight: 700;
     box-shadow: 0px 2px 1px 1px rgb(99, 99, 42);
     color: var(--light);
-
     transition: background-color .5s ease-out 0.25s, color .5s ease-out 0.25s;
 }
-
+.game-display{
+    display: flex;
+    flex-direction: column;
+    color: var(--light);
+    justify-content: center;
+    width: 1000px;
+    max-width: 100%;
+    margin-inline: auto;
+    height: 100vh;
+}
 .input-form{
- 
+    margin-top: 15rem;
     margin-inline: auto;
     display: grid;
+    place-items: center;
     background-color: rgb(243, 241, 207);
     max-width: 500px;
     width: 100%;
     border: 3px solid rgb(166, 160, 54);
     border-radius: 20px;
     width: 100%;
-    height: auto;
+    height: 300px;
     padding: 2rem 0;
 }
 
@@ -119,10 +127,6 @@ label{
 }
 
 .display-cards{
-    margin-top: 3rem;
-    margin-inline: auto;
-    max-width: 1000px;
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -152,7 +156,7 @@ label{
 }
 
 .cards:hover, .cards:focus{
-    transform: scale(1.1);
+    transform: scale(1.05);
     border: var(--dark) 3px solid;
 }
 .pokemon-card{
@@ -166,16 +170,19 @@ label{
 }
 
 .score-board{
-    display: grid;
-    grid-template-columns: 1fr .8fr;
-    border: 3px solid rgb(255, 217, 0);
-    background-color: #fff;
-
+    display: flex;
+    justify-content: space-around;
+    border: none;
+    border-radius: 5px;
+    background-color: lightgray;
+    color: var(--dark);
     margin-top: 3rem;
-
     width: 300px;
     margin-inline: auto;
     align-items: center;
+
+    box-shadow: 1px 2px 3px 3px rgba(231, 229, 223, 0.3);
+
 
 }
 .score-board p{
@@ -191,7 +198,7 @@ label{
     max-width: 500px;
     width: 100%;
     margin-inline: auto;
-    background-color: #fff;
+    background-color: var(--light);
     border-radius: 12px;
 }
 .message-board h2{
@@ -218,17 +225,17 @@ label{
 }
 
 footer{
-    background-color: green;
+    background-color: var(--dark);
     position: fixed;
     bottom: 0;
     width: 100%;
+    border-top: 3px solid var(--light);
 }
 footer > .container{
     color: var(--light);
     max-width: 1000px;
     width: 100%;
     margin-inline: auto;
-    border: 1px solid green;
 }
 
 footer > .container > ul{
